fix: responsiveness on tablet & several config
The responsiveness of various UI elements have been fixed on tablet size
and larger screens. Also, minor upgrades were done to x-sm device sizes.

In addition to those, several prettier config and package.json config
were altered to fix indentation customizations.

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 @font-face {
-   font-family: 'roboto-main';
-   src: url('./assets/fonts/RobotoCondensed-VariableFont_wght.woff2') format('woff2'),
-      url('./assets/fonts/RobotoCondensed-VariableFont_wght.woff') format('woff');
+   font-family: "roboto-main";
+   src:
+      url("./assets/fonts/RobotoCondensed-VariableFont_wght.woff2") format("woff2"),
+      url("./assets/fonts/RobotoCondensed-VariableFont_wght.woff") format("woff");
    font-weight: 600;
    font-style: normal;
 }
@@ -49,7 +50,7 @@ header::before {
    left: 0;
    width: 100%;
    height: 120%;
-   background-color: #0891B2;
+   background-color: #0891b2;
    clip-path: polygon(0% 0%, 100% 0%, 100% 18%, 0% 44%);
    z-index: -1;
 }
@@ -62,8 +63,8 @@ header .hero {
    padding-bottom: 2rem;
    align-items: center;
    justify-content: center;
+   position: relative;
 }
-
 
 header .hero .hero-image {
    margin: 3rem calc(1.5rem + 1vw);
@@ -73,10 +74,9 @@ header .hero .hero-image {
    align-items: center;
 }
 
-
 header .hero .hero-about {
-   padding: 1rem 5rem;
-   line-height: 1.5;
+   padding: calc(1.5rem + 1.5vw);
+   line-height: 1.4;
    text-align: center;
    background-color: #fff;
 }
@@ -110,8 +110,8 @@ header .hero .hero-about p {
 }
 
 main {
-   margin: calc(1rem + 1vw);
-   padding: calc(1rem + 1vw);
+   margin: calc(0.3rem + 0.5vw);
+   padding: calc(0.3rem + 0.5vw);
 }
 
 main .projects {
@@ -123,8 +123,8 @@ main .projects h2 {
 }
 
 .container {
-   margin: calc(.5rem + .5vw);
-   padding: calc(.5rem + .5vw);
+   margin: calc(0.2rem + 0.3vw);
+   padding: calc(0.2rem + 0.3vw);
    display: flex;
    flex-wrap: wrap;
    gap: 3rem;
@@ -135,15 +135,12 @@ main .projects h2 {
    flex-direction: column;
    padding-bottom: calc(1rem + 0.5vw);
    margin: calc(1rem + 1vw) 0;
-   min-width: 300px;
-   max-width: 100%;
-   flex: 1 1 300px;
-   max-width: 100%;
+   flex: 1 1 calc(90% - 1.5rem);
    transition: transform 0.3s ease;
 }
 
 .project-item:hover {
-   transform: scale(1.050);
+   transform: scale(1.05);
 }
 
 .project-item img {
@@ -171,7 +168,7 @@ main .projects h2 {
 }
 
 footer {
-   background-color: #0891B2;
+   background-color: #0891b2;
    color: #def0f5;
    flex-direction: column;
    justify-content: center;
@@ -198,18 +195,18 @@ footer .contact-area {
 }
 
 footer .contact-area .address {
-   padding: calc(.5rem + .5vw) 0;
-   margin: calc(.5rem + .5vw) 0;
+   padding: calc(0.5rem + 0.5vw) 0;
+   margin: calc(0.5rem + 0.5vw) 0;
 }
 
 footer .contact-area .contact-info {
-   padding: calc(.5rem + .5vw);
-   margin: calc(.5rem + .5vw) 0;
+   padding: calc(0.5rem + 0.5vw);
+   margin: calc(0.5rem + 0.5vw) 0;
 }
 
 footer .contact-area .social-media {
-   padding: calc(.5rem + .5vw);
-   margin: calc(.5rem + .5vw) 0;
+   padding: calc(0.5rem + 0.5vw);
+   margin: calc(0.5rem + 0.5vw) 0;
 }
 
 footer .footer-image img {
@@ -218,8 +215,14 @@ footer .footer-image img {
    width: 100%;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 420px) {
+   main {
+      margin: calc(1rem + 1vw);
+      padding: calc(1rem + 1vw);
+   }
+}
 
+@media (min-width: 768px) {
    header {
       padding: calc(1.5rem + 1vw);
       position: relative;
@@ -254,13 +257,38 @@ footer .footer-image img {
    }
 
    header .hero .hero-about p {
-      font-size: calc(.6rem + .5vw);
+      font-size: calc(0.6rem + 0.5vw);
+   }
+
+   .container {
+      justify-content: center;
+   }
+
+   .project-item {
+      flex: 1 1 calc(50% - 1.5rem);
+      max-width: calc(50% - 1.5rem);
+   }
+
+   footer .footer-wrapper {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding: calc(1rem + 0.5vw);
+   }
+
+   footer .contact-area {
+      font-size: calc(1rem + 1vw);
+   }
+
+   footer .footer-image {
+      /* margin-left: calc(2rem + 1vw); */
+
+      margin: calc(1rem + 1vw);
+      /* padding: calc(1rem + 1vw); */
    }
 }
 
-
 @media (min-width: 1315px) {
-
    header {
       padding: 2rem;
    }
@@ -269,15 +297,13 @@ footer .footer-image img {
       clip-path: polygon(0% 0%, 100% 0%, 100% 38%, 0% 83%);
    }
 
-
    header .hero .hero-about h2 {
       font-size: calc(1.7rem + 1.2vw);
    }
 
    header .hero .hero-about p {
-      font-size: calc(.8rem + 1vw);
+      font-size: calc(0.8rem + 1vw);
    }
-
 
    header .hero .hero-about .contact-icons {
       justify-content: end;
@@ -289,14 +315,14 @@ footer .footer-image img {
    }
 
    .container {
-      padding: 0 calc(2.5rem + 3vw);
-      margin: 0 calc(2.5rem + 3vw);
+      /* padding: 0 calc(1.7rem + 2vw); */
+      /* margin: 0 calc(1.7rem + 2vw); */
    }
 
    .project-item {
-      min-width: 350px;
+      flex: 1 1 calc(33% - 1.5rem);
+      max-width: calc(33% - 2.5rem);
    }
-
 
    footer h3 {
       text-align: left;
@@ -304,26 +330,11 @@ footer .footer-image img {
 
    footer .footer-wrapper {
       height: 100%;
-      padding: calc(1rem + .5vw);
-      flex-direction: row;
-      justify-content: space-between !important;
-   }
-
-   footer .contact-area {
-      flex-grow: 1;
-   }
-
-   footer .footer-image {
-      margin-left: calc(2rem + 1vw);
-
-      margin: calc(1rem + 1vw);
-      padding: calc(1rem + 1vw);
+      padding: calc(1rem + 0.5vw);
    }
 }
 
-
 @media (min-width: 2000px) {
-
    header {
       padding: calc(3rem + 3vw);
    }
@@ -338,8 +349,12 @@ footer .footer-image img {
    }
 
    .container {
-      gap: calc(2.5rem + 3vw);
-      padding: 5rem calc(4rem + 4vw);
-      margin: 0 calc(4rem + 4vw);
+      gap: calc(1rem + 1vw);
+      padding: calc(1rem + 1vw);
+      margin: 0 calc(1rem + 1vw);
+   }
+
+   .project-item {
+      max-width: calc(33% - 1.6rem);
    }
 }
